--- a/docs/vue-ebook/3.md
+++ b/docs/vue-ebook/3.md
@@ -391,7 +391,7 @@ new Vue({
 > [点击此处查看页面效果](https://vue-eboook-1255459943.cos.ap-chengdu.myqcloud.com/3/4-vue-data/4-vue-data.html)
 > [点击此处查看源码](https://github.com/godbasin/vue-ebook/tree/vue-sourcecode/3/4-vue-data)
 
-我们知道，`v-once`只渲染元素和组件一次，后面的所有重新渲染过程，被绑定的该元素/组件及其所有的子节点将被视为静态内容并跳过。但在这里，最终呈现的并不是我们初始`data`中的“欢迎来到 Vue 的世界”，而是`created`周期中设定的“啦啦啦啦啦啦”。
+我们知道，`v-once`只渲染元素和组件一次，后面的所有重新渲染过程，被绑定的该元素/组件及其所有的子节点将被视为静态内容并跳过。但在这里，最终呈现的并不是我们初始`data`中的“欢迎来到 Vue 的世界”，而是`created`周期中设定的“啦啦啦啦啦啦”。实际上是`beforeMount`周期中设定的“哈哈哈哈哈哈哈”
 
 前面讲 Vue 生命周期钩子的时候我们知道，真实 DOM 挂载发生在`beforeMount`之后、`mounted`之前，也就是说，我们在`mounted`之前的生命周期中更改`data`中 message 的值，都是有效的。
 
